--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
                                     <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
                                         <ul class="navbar-nav text-uppercase">
                                             <li class="nav-item">
-                                                <a class="nav-link tm-nav-link" href="contact.html">Contact</a>
+                                                <a class="nav-link tm-nav-link" href="http://firesaiyagin.sytes.net">Contact</a>
                                             </li>
                                         </ul>
                                     </div>
