--- a/public/index.html
+++ b/public/index.html
@@ -44,11 +44,17 @@
             </div>
             <div class="tm-welcome-container text-center text-white">
                 <div class="tm-welcome-container-inner">
-                    <p class="tm-welcome-text mb-1 text-white">Video Catalog is brought to you by TemplateMo.</p>
-                    <p class="tm-welcome-text mb-5 text-white">This is a full-width video banner.</p>
+                    <p class="tm-welcome-text mb-1 text-white"> take a break every 20 minutes to stare at an object 20 feet away for 20 seconds.<br> You could try using this rule with a short break from your coding.</p>
+                    <p class="tm-welcome-text mb-5 text-white">This website using nginx/nodejs service.</p>
                 </div>
             </div>
-
+            <center>
+                <div id="footer">
+                        <p>
+                            This website created by /facebook/Eed Asadawut.
+                        </p>
+                </div>
+            </center>
             <div id="tm-video-container">
                 <video autoplay muted loop id="tm-video">
                         <source src="video/wheat-field.mp4" type="video/mp4">
