--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
             <center>
                 <div id="footer">
                         <p>
-                            This website created by /facebook/Eed Asadawut.
+                            /facebook/ Eed Asadawut.
                         </p>
                 </div>
             </center>
